change tag names to memo:

--- a/blender.md.html
+++ b/blender.md.html
@@ -2,10 +2,10 @@
 <meta charset="utf-8">
 <link rel="stylesheet" href="inc/default.css">
 
-<meta name="keywords" content="*memo_blender*">
+<meta name="keywords" content="*memo:blender*">
 **Blender**
 
-<meta name="keywords" content="*memo_blender.view*">
+<meta name="keywords" content="*memo:blender.view*">
 # View
 key             | command
 ---             | ---
@@ -16,7 +16,7 @@ L-Click         | select
 Shift + L-Click | multiple select
 L-Drag          | multiple select
 
-<meta name="keywords" content="*memo_blender.object*">
+<meta name="keywords" content="*memo:blender.object*">
 # Object Mode
 key              | command
 ---              | ---
@@ -47,7 +47,7 @@ r[X,Y,Z]         | rotate except x or y or z axis
 ## Auto Smooth
 - Object Data Properties > Normals > Auto Smooth
 
-<meta name="keywords" content="*memo_blender.origin*">
+<meta name="keywords" content="*memo:blender.origin*">
 ## Set 3D cursor to the origin
 - Shift + s > Cursor to World Origin
 
@@ -57,7 +57,7 @@ r[X,Y,Z]         | rotate except x or y or z axis
 ## Apply Transforms
 - Object > Apply > All Transforms
 
-<meta name="keywords" content="*memo_blender.edit*">
+<meta name="keywords" content="*memo:blender.edit*">
 # Edit Mode
 mode     | key      | command
 ---      | ---      | ---
@@ -80,7 +80,7 @@ surface  | e        | extrude
 ## UV展開
 - [面選択] > UV > Unwrap
 
-<meta name="keywords" content="*memo_blender.camera*">
+<meta name="keywords" content="*memo:blender.camera*">
 # Camera
 key         | command
 ---         | ---
@@ -96,18 +96,18 @@ rzz         | roll
 - n > View > Camera to View
 
 # Property Panel
-<meta name="keywords" content="*memo_blender.render*">
+<meta name="keywords" content="*memo:blender.render*">
 ## Render
 - Render Engine: Cycles
 - Device: GPU
 - Motion Blur
 
-<meta name="keywords" content="*memo_blender.ssrefr*">
+<meta name="keywords" content="*memo:blender.ssrefr*">
 ### Screen Space Refraction
 - Render Engine: Eevee
 - Render Properties > Screen Space Reflections > Refraction
 
-<meta name="keywords" content="*memo_blender.background*">
+<meta name="keywords" content="*memo:blender.background*">
 ### 背景の透過
 - Render Properties > Film > Transparent
 - Cycles > World > Ray Visibility > Camera
@@ -204,7 +204,7 @@ File > User Preferences...
 ## 面分割
 Ctrl + R
 
-<meta name="keywords" content="*memo_blender.reference*">
+<meta name="keywords" content="*memo:blender.reference*">
 # Reference
 ## AO
 - 「AOベイク」で3Dモデルのクオリティを上げよう！
