--- a/cpp.md.html
+++ b/cpp.md.html
@@ -4,10 +4,10 @@
 
 **C++**
 
-<meta name="keywords" content="*memo_prog*">
+<meta name="keywords" content="*memo:prog*">
 
-<meta name="keywords" content="*memo_prog.c*">
-<meta name="keywords" content="*memo_prog.cpp*">
+<meta name="keywords" content="*memo:prog.c*">
+<meta name="keywords" content="*memo:prog.cpp*">
 C++
 =======================================================
 
@@ -215,11 +215,11 @@ template<class For, class For2, class BinPred>
 For search(For first, For last, For2 first2, For2 last2, BinPred p);
 ~~~
 
-<meta name="keywords" content="*memo_prog.glsl*">
+<meta name="keywords" content="*memo:prog.glsl*">
 GLSL
 =======================================================
 
-<meta name="keywords" content="*memo_prog.opengl*">
+<meta name="keywords" content="*memo:prog.opengl*">
 OpenGL
 =======================================================
 - Right-handed coordinate system
@@ -246,14 +246,14 @@ T =
     0 0 0 1
 ~~~
 
-<meta name="keywords" content="*memo_prog.directx*">
+<meta name="keywords" content="*memo:prog.directx*">
 DirectX
 =======================================================
 - Left-handed coordinate system
 - Matrix
     - Row order memory
 
-<meta name="keywords" content="*memo_prog.eigen*">
+<meta name="keywords" content="*memo:prog.eigen*">
 Eigen
 =======================================================
 - Column order memory
@@ -278,7 +278,7 @@ typedef Matrix<float, 3, 1> Vector3f;
 typedef Matrix<float, 1, 3> RowVector3f;
 ~~~
 
-<meta name="keywords" content="*memo_prog.glm*">
+<meta name="keywords" content="*memo:prog.glm*">
 glm
 =======================================================
 ~~~
@@ -296,7 +296,7 @@ glm::mat4 proj = glm::ortho<float>(0, w, 0, h);
 (0, 0) (w, h) -> (-1, -1) (1, 1)
 ~~~
 
-<meta name="keywords" content="*memo_prog.opencv*">
+<meta name="keywords" content="*memo:prog.opencv*">
 OpenCV
 =======================================================
 ## Type
@@ -305,14 +305,14 @@ OpenCV
 CV_8UC1  | 8bit unsigned 1 channel
 CV_32FC2 | 32bit float 2 channel
 
-<meta name="keywords" content="*memo_prog.imgui*">
+<meta name="keywords" content="*memo:prog.imgui*">
 imgui
 =======================================================
 ## demo
 - ShowDemoWindow()
 
-<meta name="keywords" content="*memo_prog.make*">
-<meta name="keywords" content="*memo_prog.make.syntax*">
+<meta name="keywords" content="*memo:prog.make*">
+<meta name="keywords" content="*memo:prog.make.syntax*">
 Makefile
 =======================================================
 ## syntax
@@ -351,8 +351,8 @@ tags:
 	ctags -R .
 ~~~
 
-<meta name="keywords" content="*memo_prog.cmake*">
-<meta name="keywords" content="*memo_prog.cmake.syntax*">
+<meta name="keywords" content="*memo:prog.cmake*">
+<meta name="keywords" content="*memo:prog.cmake.syntax*">
 CMakeLists.txt
 =======================================================
 ## module list
