--- a/dev.md.html
+++ b/dev.md.html
@@ -2,11 +2,11 @@
 <meta charset="utf-8">
 <link rel="stylesheet" href="inc/default.css">
 
-<meta name="keywords" content="*memo_dev*">
+<meta name="keywords" content="*memo:dev*">
 **Develop**
 
-<meta name="keywords" content="*memo_autohotkey*">
-<meta name="keywords" content="*memo_ahk*">
+<meta name="keywords" content="*memo:autohotkey*">
+<meta name="keywords" content="*memo:ahk*">
 AutoHotKey
 =============================================
 
@@ -59,11 +59,11 @@ App      | Key             | Description
 ---------|-----------------|---
 Windows  | RShift          | Hankaku/Zenkaku
 
-<meta name="keywords" content="*memo_dev.keyboard*">
+<meta name="keywords" content="*memo:dev.keyboard*">
 Keyboard
 =======================================================
 
-<meta name="keywords" content="*memo_dev.hhk*">
+<meta name="keywords" content="*memo:dev.hhk*">
 ## HHK 60 Key
 
 *****************************************************************
@@ -80,7 +80,7 @@ Keyboard
 *         +---+---+-----------------------+-------+---+
 *****************************************************************
 
-<meta name="keywords" content="*memo_dev.niz*">
+<meta name="keywords" content="*memo:dev.niz*">
 ## Niz 84 Key
 
 *********************************************************************
@@ -108,7 +108,7 @@ Keyboard
 5. キーボード側でパスコードを入力してEnterキーを押す
 6. 接続完了
 
-<meta name="keywords" content="*memo_dev.colors*">
+<meta name="keywords" content="*memo:dev.colors*">
 Settings 256 colors for vim, tmux, mintty
 =======================================================
 ## .minttyrc
@@ -132,11 +132,11 @@ set t_Co=256
 $ tmux -2
 ~~~
 
-<meta name="keywords" content="*memo_dev.tmux*">
+<meta name="keywords" content="*memo:dev.tmux*">
 tmux
 =======================================================
 
-<meta name="keywords" content="*memo_dev.tmux.keymap*">
+<meta name="keywords" content="*memo:dev.tmux.keymap*">
 ## keymap
 Mode | Command         | Description
 -----|-----------------|---
@@ -162,7 +162,7 @@ C    | prefix ]        | paste
 - C: copy mode
 - * my key maps
 
-<meta name="keywords" content="*memo_my.tmux.keymap*">
+<meta name="keywords" content="*memo:my.tmux.keymap*">
 ## My Tmux Keymap
 
 App         | Key                    | Description
@@ -185,7 +185,7 @@ tmux.open   | F1 r                   | reload ~/.tmux.conf
             | F1 y                   | yank to the clipboard
             | F1 p                   | paste from the clipboard
 
-<meta name="keywords" content="*memo_dev.vifm*">
+<meta name="keywords" content="*memo:dev.vifm*">
 vifm
 =======================================================
 ## Key
@@ -256,11 +256,11 @@ Command       | Description
 :lstrash      | list in trash
 :trashes      | list trash directories
 
-<meta name="keywords" content="*memo_dev.w3m*">
+<meta name="keywords" content="*memo:dev.w3m*">
 w3m
 =======================================================
 
-<meta name="keywords" content="*memo_dev.w3m.keymap*">
+<meta name="keywords" content="*memo:dev.w3m.keymap*">
 ## w3m keymap
   | Command              | Description
 --|----------------------|---
@@ -281,7 +281,7 @@ P | C-p                  | prev history
 P | H                    | help
 P | Q                    | quit
 
-<meta name="keywords" content="*memo_dev.vscode*">
+<meta name="keywords" content="*memo:dev.vscode*">
 Visual Studio Code
 =======================================================
 ## plugin
@@ -301,8 +301,8 @@ C-S-```              | new terminal
 C-PageDown           | next editor
 C-PageUp             | prev editor
 
-<meta name="keywords" content="*memo_dev.visual_studio*">
-<meta name="keywords" content="*memo_dev.vs*">
+<meta name="keywords" content="*memo:dev.visual_studio*">
+<meta name="keywords" content="*memo:dev.vs*">
 Visual Studio
 =======================================================
 ## plugin
@@ -312,7 +312,7 @@ Visual Studio
 ## tab
 - Tool > Options > Text Editor > C/C++ > Tab
 
-<meta name="keywords" content="*memo_dev.android_studio*">
+<meta name="keywords" content="*memo:dev.android_studio*">
 Android Studio
 =======================================================
 ## plugin
@@ -329,13 +329,13 @@ gradlew installDebug
 gradlew uninstallDebug
 ~~~
 
-<meta name="keywords" content="*memo_dev.android*">
+<meta name="keywords" content="*memo:dev.android*">
 Android
 =======================================================
 ## デバイスの設定
 - 設定 > 開発者向けオプション > USBデバッグをONにする
 
-<meta name="keywords" content="*memo_dev.adb*">
+<meta name="keywords" content="*memo:dev.adb*">
 ## adb
 - https://developer.android.com/studio/command-line/adb?hl=ja
 
