--- a/links.md.html
+++ b/links.md.html
@@ -4,7 +4,7 @@
 
 **Links**
 
-<meta name="keywords" content="*memo_links*">
+<meta name="keywords" content="*memo:links*">
 General
 =======================================================
 <div id="col3">
