--- a/memo.md.html
+++ b/memo.md.html
@@ -5,7 +5,7 @@
 
 **Memo**
 
-<meta name="keywords" content="*memo_top*">
+<meta name="keywords" content="*memo:top*">
 
 ![Image](images/top.jpg)
 
