--- a/my.md.html
+++ b/my.md.html
@@ -2,10 +2,10 @@
 <meta charset="utf-8">
 <link rel="stylesheet" href="inc/default.css">
 
-<meta name="keywords" content="*memo_my*">
+<meta name="keywords" content="*memo:my*">
 **My**
 
-<meta name="keywords" content="*memo_my.keymap*">
+<meta name="keywords" content="*memo:my.keymap*">
 Keymap
 =======================================================
 
@@ -23,11 +23,11 @@ Keymap
 *         +---+---+-----------------------+-------+---+
 *****************************************************************
 
-<meta name="keywords" content="*memo_my.win.keymap*">
-<meta name="keywords" content="*memo_my.fn.keymap*">
-<meta name="keywords" content="*memo_my.mintty.keymap*">
-<meta name="keywords" content="*memo_my.vim.keymap*">
-<meta name="keywords" content="*memo_my.tips*">
+<meta name="keywords" content="*memo:my.win.keymap*">
+<meta name="keywords" content="*memo:my.fn.keymap*">
+<meta name="keywords" content="*memo:my.mintty.keymap*">
+<meta name="keywords" content="*memo:my.vim.keymap*">
+<meta name="keywords" content="*memo:my.tips*">
 
 App                | Key                 | Description
 ---                | ---                 | ---
@@ -105,7 +105,7 @@ Vim IDE
 ![Vim IDE](images/vim-ide.svg)
 
 
-<meta name="keywords" content="*memo_my.vim.command*">
+<meta name="keywords" content="*memo:my.vim.command*">
 Vim Command
 =======================================================
 Command                   | Description
