--- a/os_linux.md.html
+++ b/os_linux.md.html
@@ -4,7 +4,7 @@
 
 **Linux**
 
-<meta name="keywords" content="*memo_os.wsl*">
+<meta name="keywords" content="*memo:os.wsl*">
 WSL
 =======================================================
 
@@ -43,7 +43,7 @@ AppData/Local/Packages/CanonicalGroupLimited.UbuntuonWindows_*
 ubuntu$ lsb_release -a
 ~~~
 
-<meta name="keywords" content="*memo_os.virtualbox*">
+<meta name="keywords" content="*memo:os.virtualbox*">
 VirtualBox
 =======================================================
 
@@ -75,11 +75,11 @@ sudo mount -t vboxsf SHARE_FOLDER /mnt/vbox/SHARE_FOLDER
 SHARE_FOLDER /mnt/vbox/SHARE_FOLDER vboxsf defaults,noauto,iocharset=utf8,uid=1000,gid=1000 0 0
 ~~~
 
-<meta name="keywords" content="*memo_os.linux*">
+<meta name="keywords" content="*memo:os.linux*">
 Linux
 =======================================================
 
-<meta name="keywords" content="*memo_os.linux.apt*">
+<meta name="keywords" content="*memo:os.linux.apt*">
 ## apt
 | Command               | Description                     |
 | ---                   | ---                             |
@@ -96,7 +96,7 @@ Linux
 | apt remove pkg        | remove package                  |
 | apt purge pkg         | remove package and its settings |
 
-<meta name="keywords" content="*memo_os.linux.flatpak*">
+<meta name="keywords" content="*memo:os.linux.flatpak*">
 ## flatpak
 
 ~~~
@@ -141,7 +141,7 @@ SysRq + b           | reboot
 ## WindowsでISOイメージをUSBメモリーに書き込む
 - [Rufus](https://rufus.ie/)
 
-<meta name="keywords" content="*memo_os.ubuntu*">
+<meta name="keywords" content="*memo:os.ubuntu*">
 Ubuntu Linux
 =======================================================
 
@@ -165,7 +165,7 @@ LC_ALL=C xdg-user-dirs-gtk-update
 fc-list
 ~~~
 
-<meta name="keywords" content="*memo_os.mxlinux*">
+<meta name="keywords" content="*memo:os.mxlinux*">
 MX Linux
 =======================================================
 ## MX Package Installer
@@ -206,7 +206,7 @@ $ id
 share /mnt/vbox/share vboxsf defaults,iocharset=utf8,uid=1000,gid=1000 0 0
 ~~~
 
-<meta name="keywords" content="*memo_os.linux.encfs*">
+<meta name="keywords" content="*memo:os.linux.encfs*">
 ## encfs
 - [EncFS](https://wiki.archlinux.jp/index.php/EncFS)
 - [ディスク暗号化](https://wiki.archlinux.jp/index.php/ディスク暗号化)
@@ -217,7 +217,7 @@ share /mnt/vbox/share vboxsf defaults,iocharset=utf8,uid=1000,gid=1000 0 0
 | fusermount -u ~/dir          | umount          |
 | encfsctl passwd ~/.encfs_dir | change password |
 
-<meta name="keywords" content="*memo_os.manjaro*">
+<meta name="keywords" content="*memo:os.manjaro*">
 Manjaro Linux
 =======================================================
 
@@ -241,14 +241,14 @@ sudo pacman -S vim
 sudo pacman -S nodejs npm
 ~~~
 
-<meta name="keywords" content="*memo_os.termux*">
+<meta name="keywords" content="*memo:os.termux*">
 Termux
 =======================================================
 - https://termux.com/
 - [The Termux Wiki](https://wiki.termux.com/wiki/Main_Page)
 - Hacker's Keyboard
 
-<meta name="keywords" content="*memo_os.termux.pkg*">
+<meta name="keywords" content="*memo:os.termux.pkg*">
 ## pkg [recommended]
 ~~~
 pkg help
@@ -269,7 +269,7 @@ pkg install termux-exec
 ~~~
 - [termux-exec](https://wiki.termux.com/wiki/FAQ#Why_do_I_keep_getting_.27.2Fbin.2Fsh_bad_interpreter.27_error.3F)
 
-<meta name="keywords" content="*memo_os.mac*">
+<meta name="keywords" content="*memo:os.mac*">
 Mac
 =======================================================
 ## Shortcut
@@ -281,9 +281,9 @@ Shift + クリック| ファイル連続選択
 Cmd + クリック  | ファイル個別選択
 Cmd + delete    | ファイル削除
 
-<meta name="keywords" content="*memo_os.linux.ssh*">
-<meta name="keywords" content="*memo_os.linux.scp*">
-<meta name="keywords" content="*memo_os.linux.ip*">
+<meta name="keywords" content="*memo:os.linux.ssh*">
+<meta name="keywords" content="*memo:os.linux.scp*">
+<meta name="keywords" content="*memo:os.linux.ip*">
 SSH
 =======================================================
 
@@ -305,7 +305,7 @@ SSH
 | scp [-P PORT] SRC USER@HOST:DST | copy from local to remote                          |
 | scp [-P PORT] USER@HOST:SRC DST | copy from remote to local                          |
 
-<meta name="keywords" content="*memo_os.linux.sshd*">
+<meta name="keywords" content="*memo:os.linux.sshd*">
 ## sshd
 - [gitbash] 管理者権限で起動する
 ~~~
