--- a/os_msys2.md.html
+++ b/os_msys2.md.html
@@ -4,16 +4,16 @@
 
 **MSYS2**
 
-<meta name="keywords" content="*memo_os.gitbash*">
+<meta name="keywords" content="*memo:os.gitbash*">
 Git for Windows (gitbash)
 =======================================================
 
-<meta name="keywords" content="*memo_os.msys2*">
+<meta name="keywords" content="*memo:os.msys2*">
 MSYS2
 =======================================================
 - http://www.msys2.org/
 
-<meta name="keywords" content="*memo_os.msys2.pacman*">
+<meta name="keywords" content="*memo:os.msys2.pacman*">
 
 ## pacman
 
@@ -41,7 +41,7 @@ Option                | 説明
 paccache -r
 ~~~
 
-<meta name="keywords" content="*memo_os.msys2.pacman.conf*">
+<meta name="keywords" content="*memo:os.msys2.pacman.conf*">
 
 ## /etc/pacman.conf
 ~~~
@@ -84,7 +84,7 @@ export MSYS2_ARG_CONV_EXCL="*"
 /usr/bin/git clone https://github.com/jeaye/stdman.git
 ~~~
 
-<meta name="keywords" content="*memo_os.cygwin*">
+<meta name="keywords" content="*memo:os.cygwin*">
 Cygwin
 =======================================================
 ## DLLの読み込みに失敗する場合
