--- a/python.md.html
+++ b/python.md.html
@@ -4,11 +4,11 @@
 
 **Python**
 
-<meta name="keywords" content="*memo_prog.python*">
+<meta name="keywords" content="*memo:prog.python*">
 Python
 =======================================================
 
-<meta name="keywords" content="*memo_prog.python.venv*">
+<meta name="keywords" content="*memo:prog.python.venv*">
 ## venv
 
 ### install
@@ -35,7 +35,7 @@ $ deactivate
 ~~~
 
 ## pip
-<meta name="keywords" content="*memo_prog.python.pip*">
+<meta name="keywords" content="*memo:prog.python.pip*">
 
 Command                           | Description
 --------------------------------- | ---
@@ -54,17 +54,17 @@ pip uninstall {pkg}               | uninstall package
 python -m pip install --upgrade pip
 ~~~
 
-<meta name="keywords" content="*memo_prog.python.pip.freeze*">
+<meta name="keywords" content="*memo:prog.python.pip.freeze*">
 ### list / install requrired packages
 ~~~
 pip freeze > requirements.txt
 pip install -r requirements.txt
 ~~~
 
-<meta name="keywords" content="*memo_prog.python.syntax*">
+<meta name="keywords" content="*memo:prog.python.syntax*">
 ## syntax
 
-<meta name="keywords" content="*memo_prog.python.syntax.string*">
+<meta name="keywords" content="*memo:prog.python.syntax.string*">
 ### string
 ~~~
 >>> a = 'hello'
@@ -72,7 +72,7 @@ pip install -r requirements.txt
 el
 ~~~
 
-<meta name="keywords" content="*memo_prog.python.syntax.main*">
+<meta name="keywords" content="*memo:prog.python.syntax.main*">
 ### main
 ~~~
 #!/usr/bin/env python
@@ -93,7 +93,7 @@ if __name__ == "__main__":
 >>> sys.path
 ~~~
 
-<meta name="keywords" content="*memo_prog.python.syntax.import*">
+<meta name="keywords" content="*memo:prog.python.syntax.import*">
 ### import
 ~~~
 import <modeule>
@@ -109,7 +109,7 @@ import matplotlib.pyplot as plt
 from matplotlib import pyplot as plt
 ~~~
 
-<meta name="keywords" content="*memo_prog.python.syntax.expr*">
+<meta name="keywords" content="*memo:prog.python.syntax.expr*">
 ### expr
 
 ~~~
@@ -131,7 +131,7 @@ x or y     | OR
 not x      | NOT
 ~~~
 
-<meta name="keywords" content="*memo_prog.python.syntax.if*">
+<meta name="keywords" content="*memo:prog.python.syntax.if*">
 ### if
 ~~~
 if expr:
@@ -142,7 +142,7 @@ else:
     statements
 ~~~
 
-<meta name="keywords" content="*memo_prog.python.syntax.for*">
+<meta name="keywords" content="*memo:prog.python.syntax.for*">
 ### for
 ~~~
 for i in range(5):
@@ -159,7 +159,7 @@ for i in list:
     statements
 ~~~
 
-<meta name="keywords" content="*memo_prog.python.syntax.while*">
+<meta name="keywords" content="*memo:prog.python.syntax.while*">
 ### while
 ~~~
 i = 0
@@ -168,9 +168,9 @@ while i < 5:
     i += 1
 ~~~
 
-<meta name="keywords" content="*memo_prog.python.anaconda*">
-<meta name="keywords" content="*memo_prog.python.miniconda*">
-<meta name="keywords" content="*memo_prog.python.conda*">
+<meta name="keywords" content="*memo:prog.python.anaconda*">
+<meta name="keywords" content="*memo:prog.python.miniconda*">
+<meta name="keywords" content="*memo:prog.python.conda*">
 Anaconda / Miniconda
 =======================================================
 
@@ -199,7 +199,7 @@ conda create -n {env} python
 conda activate {env}
 ~~~
 
-<meta name="keywords" content="*memo_prog.python.numpy*">
+<meta name="keywords" content="*memo:prog.python.numpy*">
 Numpy
 =======================================================
 ~~~
@@ -209,7 +209,7 @@ ar = np.asarray(list)  # copy
 ar = np.asarray(ar)    # no copy
 ~~~
 
-<meta name="keywords" content="*memo_prog.python.pytorch*">
+<meta name="keywords" content="*memo:prog.python.pytorch*">
 PyTorch
 =======================================================
 
@@ -223,7 +223,7 @@ conda install pytorch torchvision cudatoolkit=10.1 -c pytorch
 ~~~
 -->
 
-<meta name="keywords" content="*memo_prog.python.tensorflow*">
+<meta name="keywords" content="*memo:prog.python.tensorflow*">
 TensorFlow
 =======================================================
 
