--- a/setup.md.html
+++ b/setup.md.html
@@ -2,10 +2,10 @@
 <meta charset="utf-8">
 <link rel="stylesheet" href="inc/default.css">
 
-<meta name="keywords" content="*memo_setup*">
+<meta name="keywords" content="*memo:setup*">
 **Setup**
 
-<meta name="keywords" content="*memo_setup.wsl*">
+<meta name="keywords" content="*memo:setup.wsl*">
 Setup WSL
 =======================================================
 ## Clone env
@@ -80,11 +80,11 @@ C:\Program Files\CMake\bin
   helper = /mnt/c/Program\\ Files/Git/mingw64/bin/git-credential-manager-core.exe
 ~~~
 
-<meta name="keywords" content="*memo_setup.gitbash*">
+<meta name="keywords" content="*memo:setup.gitbash*">
 Setup Gitbash
 =======================================================
 
-<meta name="keywords" content="*memo_setup.msys2*">
+<meta name="keywords" content="*memo:setup.msys2*">
 Setup Msys2
 =======================================================
 ## Install Windows Apps
@@ -102,7 +102,7 @@ Setup Msys2
 - GoogleDrive
 - Dropbox
 
-<meta name="keywords" content="*memo_setup.linux*">
+<meta name="keywords" content="*memo:setup.linux*">
 Setup Linux
 =======================================================
 ## Settings
@@ -129,7 +129,7 @@ sudo add-apt-repository --remove ppa:jonathonf/vim
 ~~~
 </details>
 
-<meta name="keywords" content="*memo_setup.windows*">
+<meta name="keywords" content="*memo:setup.windows*">
 Setup Windows
 =======================================================
 ## Install Windows Apps
@@ -207,7 +207,7 @@ cygwin
 ~~~
 -->
 
-<meta name="keywords" content="*memo_setup.proxy*">
+<meta name="keywords" content="*memo:setup.proxy*">
 Proxy
 =======================================================
 ## ~/.bashrc
@@ -224,7 +224,7 @@ export GIT_SSL_NO_VERIFY=1
 export CURL_SSL_NO_VERIFY=1
 ~~~
 
-<meta name="keywords" content="*memo_setup.pip*">
+<meta name="keywords" content="*memo:setup.pip*">
 Pip
 =======================================================
 ## pip.conf (Linux)
@@ -233,7 +233,7 @@ Pip
 ## pip.ini (Windows)
 - $APPDATA/pip/pip.ini
 
-<meta name="keywords" content="*memo_setup.vim*">
+<meta name="keywords" content="*memo:setup.vim*">
 Vim
 =============================================
 ## g:coc_config_home
@@ -251,7 +251,7 @@ $MY_VIM/coc_data/linux (linux)
 ~/.config/coc          (linux local)
 ~~~
 
-<meta name="keywords" content="*memo_setup.commands*">
+<meta name="keywords" content="*memo:setup.commands*">
 Install/Update/Upgrade Commands
 =======================================================
 App          | Command                    | Description
