--- a/soft.md.html
+++ b/soft.md.html
@@ -4,17 +4,17 @@
 
 **Software**
 
-<meta name="keywords" content="*memo_soft*">
+<meta name="keywords" content="*memo:soft*">
 
-<meta name="keywords" content="*memo_soft.ue*">
+<meta name="keywords" content="*memo:soft.ue*">
 UE
 =======================================================
 | Key          | Description     |
 | ---          | ---             |
 | Ctrl + Space | Content Browser |
 
-<meta name="keywords" content="*memo_soft.imagemagick*">
-<meta name="keywords" content="*memo_soft.convert*">
+<meta name="keywords" content="*memo:soft.imagemagick*">
+<meta name="keywords" content="*memo:soft.convert*">
 ImageMagick
 =======================================================
 ## resize
@@ -67,7 +67,7 @@ convert +append image1 image2 image3 output_image
 convert rgb.jpg ( alpha.png -colorspace gray -alpha off ) -compose copy-opacity -composite rgba.png
 ~~~
 
-<meta name="keywords" content="*memo_soft.convert_files*">
+<meta name="keywords" content="*memo:soft.convert_files*">
 Convert Files
 =======================================================
 ## cut video
@@ -95,13 +95,13 @@ img2pdf input_*.jpg -o output.pdf
 pdftocairo -jpeg -r 300 input.pdf output_prefix
 ~~~
 
-<meta name="keywords" content="*memo_soft.gimp*">
+<meta name="keywords" content="*memo:soft.gimp*">
 Gimp
 =======================================================
 ## 市松模様(checker)を作る
 [フィルター] -> [下塗り] -> [パターン] -> [市松模様]
 
-<meta name="keywords" content="*memo_soft.unity*">
+<meta name="keywords" content="*memo:soft.unity*">
 Unity
 =======================================================
 - Left-handed coordinate system
@@ -114,7 +114,7 @@ Unity
 
 ![unity](images/model_unity.jpg)
 
-<meta name="keywords" content="*memo_soft.meshlab*">
+<meta name="keywords" content="*memo:soft.meshlab*">
 MeshLab
 =======================================================
 - Right-handed coordinate system
@@ -136,7 +136,7 @@ MeshLab
 ## 法線をそろえる
 - Filters > Normals, ... > Re-Orient all faces coherently
 
-<meta name="keywords" content="*memo_soft.freecad*">
+<meta name="keywords" content="*memo:soft.freecad*">
 FreeCAD
 =======================================================
 ## Part Design
@@ -152,13 +152,13 @@ FreeCAD
 
 ## Mesh Design
 
-<meta name="keywords" content="*memo_soft.word*">
+<meta name="keywords" content="*memo:soft.word*">
 Word
 =======================================================
 ## 図、表の説明文の入れ方
 テキストボックスを作成し、図、表をテキストボックス内にドラッグ・ドロップする。
 
-<meta name="keywords" content="*memo_soft.powerpoint*">
+<meta name="keywords" content="*memo:soft.powerpoint*">
 PowerPoint
 =======================================================
 - Insert > Object
