--- a/stock.md.html
+++ b/stock.md.html
@@ -4,7 +4,7 @@
 
 **Stock**
 
-<meta name="keywords" content="*memo_stock*">
+<meta name="keywords" content="*memo:stock*">
 
 * [株・個人投資家の喫茶店]("http://www.kabudream.com/market/market.html")
 * [マーケットの話題]("http://www.traders.co.jp/domestic_stocks/domestic_market/market_topix.asp")
