--- a/lang.md.html
+++ b/lang.md.html
@@ -12,7 +12,7 @@ body {
 
 **Lang**
 
-<meta name="keywords" content="*memo_lang.compare*">
+<meta name="keywords" content="*memo:lang.compare*">
 言語syntax比較
 =============================================
 |         | C++                                                      | Python               | Vim                      | Bash                |
@@ -46,7 +46,7 @@ body {
 |         |                                                          |                      |                          |                     |
 |         |                                                          |                      |                          |                     |
 
-<meta name="keywords" content="*memo_lang.compare_lib*">
+<meta name="keywords" content="*memo:lang.compare_lib*">
 ライブラリsyntax比較
 =============================================
 |                  | math | glsl | Eigen | glm | numpy |
@@ -59,7 +59,7 @@ body {
 - [note.nkmk.me: Python, NumPyで行列の演算（逆行列、行列式、固有値など）](https://note.nkmk.me/python-numpy-matrix/)
 
 
-<meta name="keywords" content="*memo_lang.markdeep*">
+<meta name="keywords" content="*memo:lang.markdeep*">
 Markdeep
 =============================================
 
@@ -69,7 +69,7 @@ Markdeep
 | back quote | ```    |
 | bar        | `|`    |
 
-<meta name="keywords" content="*memo_lang.html*">
+<meta name="keywords" content="*memo:lang.html*">
 HTML
 =============================================
 
@@ -85,7 +85,7 @@ body {
 </style>
 ~~~
 
-<meta name="keywords" content="*memo_lang.bat*">
+<meta name="keywords" content="*memo:lang.bat*">
 BAT
 =============================================
 
